--- a/app/src/main/res/layout/activity_server.xml
+++ b/app/src/main/res/layout/activity_server.xml
@@ -13,7 +13,6 @@
         android:layout_marginStart="128dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="CEP"
         android:textColor="#9C27B0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnDefinirCep"
@@ -40,6 +39,7 @@
         android:id="@+id/btnBuscarCep"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="buscarCep"
         android:text="Enviar"
         android:textColor="#9C27B0"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -150,14 +150,14 @@
         android:layout_height="57dp"
         android:ems="10"
         android:inputType="textShortMessage"
-        android:text="123"
+        android:text="000"
         android:textAlignment="center"
         android:textColor="#9C27B0"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/tvCepCorreto"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/advinhar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.371"
+        app:layout_constraintStart_toStartOf="@+id/advinhar"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.626" />
 
@@ -180,7 +180,7 @@
         android:layout_width="88dp"
         android:layout_height="41dp"
         android:layout_marginEnd="12dp"
-        android:text="00-000"
+        android:text="00000"
         android:textAlignment="center"
         android:textColor="#9C27B0"
         android:textSize="24sp"
