--- a/app/src/main/res/layout/activity_cliente_t_c_p.xml
+++ b/app/src/main/res/layout/activity_cliente_t_c_p.xml
@@ -72,6 +72,7 @@
         android:text="Conectar ao Server"
         android:textColor="#9C27B0"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/tvStatusClient"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,9 +86,11 @@
         android:text="Desconectado"
         android:textColor="#9C27B0"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/tvEstadoJogo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.214" />
 
     <EditText
         android:id="@+id/editCepJogador"
@@ -161,13 +164,15 @@
         android:id="@+id/tvEstadoJogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
+        android:layout_marginBottom="30dp"
         android:text="Estado: Aguardando CEP"
         android:textColor="#9C27B0"
         app:layout_constraintBottom_toTopOf="@+id/editCepJogador"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/editBuscarCep"
@@ -184,8 +189,7 @@
         app:layout_constraintHorizontal_bias="0.928"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.613"
-        tools:text="000" />
+        app:layout_constraintVertical_bias="0.613" />
 
     <TextView
         android:id="@+id/tvCepCorreto"
